[gd_scene load_steps=2 format=2]

[ext_resource path="res://actors/Crab/Crab Formations/Formations.gd" type="Script" id=1]

[node name="1x3" type="Node2D"]
script = ExtResource( 1 )
spawns = [ NodePath("Crab1"), NodePath("Crab2"), NodePath("Crab3"), NodePath("Crab4"), NodePath("Crab5"), NodePath("Crab6") ]

[node name="IntervalTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Despawn" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Crab1" type="Node2D" parent="."]
position = Vector2( 0, -64 )

[node name="Crab2" type="Node2D" parent="."]
position = Vector2( 72, 24 )

[node name="Crab3" type="Node2D" parent="."]
position = Vector2( 152, 88 )

[node name="Crab4" type="Node2D" parent="."]
position = Vector2( 256, 64 )

[node name="Crab5" type="Node2D" parent="."]
position = Vector2( 320, -24 )

[node name="Crab6" type="Node2D" parent="."]
position = Vector2( 408, -88 )

[connection signal="timeout" from="IntervalTimer" to="." method="_on_IntervalTimer_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
